--- a/src/core/auth/signup/Signup.module.scss
+++ b/src/core/auth/signup/Signup.module.scss
@@ -3,104 +3,240 @@
     justify-content: space-between;
     padding-bottom: 2rem;
     gap: 7rem;
-    background-color: #F6FAFB;
+    background-color: #F9F7FF;
+    width: 100%;
 
     @media screen and (max-width: 600px) {
         padding-bottom: 3.625rem;
     }
 
-    .Formm {
+    .signupLeft {
+       
+        margin-top: 2.5rem;
+        margin-left: 4rem;
         display: flex;
         flex-direction: column;
-        row-gap: 23px;
+        margin-left: 1.25rem;
+        margin-right: 1.25rem;
+        align-self: center;
+        @media screen and (min-width: 600px) {
+          margin-left: auto;
+          margin-right: auto;
+        }
+        @media screen and (min-width: 1024px) {
+            width: 50%;
+            margin-left: 1.25rem;
+            margin-right: 1.25rem;
+          }
 
-        .eachContainer {
+        .abeg {
             display: flex;
             flex-direction: column;
+            width:100%;
+            align-self: center;
+            @media screen and (min-width: 1440px) {
+                width: 50%;
+              }
+            .createAccountText {
+                margin-bottom: 2.5rem;
+                text-align: center;
+                font-style: normal;
+                font-weight: 700;
+                font-size: 1.563rem;
+                line-height: 160%;
+                color: #333333;
 
-            .describer {
-                margin-bottom: 8px;
-                font-size: 16px;
-                font-weight: 600;
-                color: #707070;
             }
 
-            .inpuT {
+
+            .permission {
+                margin-top: 1rem;
+
+                .permissionText {
+                    margin-left: 0.5rem;
+                    font-weight: 400;
+                    font-size: 1rem;
+                    line-height: 120%;
+                    text-decoration: none;
+                }
+
+            }
+
+            .button {
+                background: #714DD9;
+                border-radius: 0.5rem;
                 width: 100%;
-                padding: 15px 16px;
-                border: 1px solid #D3D0D9;
-                border-radius: 8px;
-                outline: none;
+                padding: 0.875rem;
+                color: white;
+                font-weight: 700;
+                font-size: 1rem;
+                line-height: 1.25rem;
+                cursor: pointer;
+                margin-top: 5rem;
+                border: none;
 
                 &:focus {
-                    border: 1px solid #714DD9;
+                    box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05), 0px 0px 0px 4px #D1E9FF;
                 }
             }
 
-            .Err {
+            .buttonDisabled {
                 width: 100%;
-                padding: 15px 16px;
-                border: 1px solid #FF4D4F;
-                border-radius: 8px;
-                outline: none;
+                padding: 0.875rem;
+                background: #D3D0D9;
+                border-radius: 0.5rem;
+                color: white;
+                font-weight: 700;
+                font-size: 1rem;
+                line-height: 1.25rem;
+                margin-top: 5rem;
+                border: none;
             }
 
-            .phone {
-                background-color: #fff;
+            .buttonEnabled {
+                width: 100%;
+                padding: 0.875rem;
+                background-color: #714DD9;
                 border-radius: 0.5rem;
-                border: 1px solid #D3D0D9;
-                padding: 15px 16px;
-                margin-top: 0;
+                color: white;
+                font-weight: 700;
+                font-size: 1rem;
+                line-height: 1.25rem;
+                margin-top: 5rem;
+                border: none;
+            }
 
-                input {
-                    border: none;
-                    outline: none;
+            .tosignup {
+                margin-top: 1.719rem;
+                color: #707070;
+                text-align: center;
+            }
+
+            .continueWith {
+                display: flex;
+                align-items: center;
+                margin-top: 2rem;
+
+                .continueWithLine {
+                    height: 2px;
+                    display: block;
+                    width: 33%;
+                    background-color: #D3D0D9;
+                }
+
+                .continueWithText {
+                    color: #707070;
+                    margin-right: 0.7rem;
+                    margin-left: 0.7rem;
                 }
             }
 
-            .passwordInputWrapper {
-                position: relative;
+            .signupSocials {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin-top: 1rem;
+                gap: 2rem;
+            }
 
-                .passwordInput {
-                    padding: 0.938rem 1rem;
-                    height: 3rem;
-                    background: #FFFFFF;
-                    border: 1px solid #E9F3F5;
-                    border-radius: 0.5rem;
+            .Formm {
+                display: flex;
+                flex-direction: column;
+                row-gap: 23px;
 
-                    &:focus {
+
+                .eachContainer {
+                    display: flex;
+                    flex-direction: column;
+
+                    .describer {
+                        margin-bottom: 8px;
+                        font-size: 16px;
+                        font-weight: 600;
+                        color: #707070;
+                    }
+
+                    .inpuT {
+                        width: 100%;
+                        padding: 15px 16px;
+                        border: 1px solid #D3D0D9;
+                        border-radius: 8px;
                         outline: none;
-                        border: 1px solid #714DD9;
+                        font-size: 18px;
+
+                        &:focus {
+                            border: 1px solid #714DD9;
+                        }
+                    }
+
+                    .Err {
+                        width: 100%;
+                        padding: 15px 16px;
+                        border: 1px solid #FF4D4F;
+                        border-radius: 8px;
+                        outline: none;
+                    }
+
+                    .phone {
+                        background-color: #fff;
+                        border-radius: 0.5rem;
+                        border: 1px solid #D3D0D9;
+                        padding: 15px 16px;
+                        margin-top: 0;
+
+                        input {
+                            border: none;
+                            outline: none;
+                        }
+                    }
+
+                    .passwordInputWrapper {
+                        position: relative;
+                        display: flex;
+                        align-items: center;
+
+                        .passwordInput {
+                            padding: 0.938rem 1rem;
+                            position: relative;
+                            height: 3rem;
+                            background: #FFFFFF;
+                            border: 1px solid #E9F3F5;
+                            border-radius: 0.5rem;
+                            width: 100%;
+                            font-size: 18px;
+
+                            &:focus {
+                                outline: none;
+                                border: 1px solid #714DD9;
+                            }
+                            
+                        }
+                        .eye{
+                            position: absolute;
+                            cursor: pointer;
+                            right: 1rem;
+                            bottom: .5rem;
+                            font-size: 1.5rem;
+                           
+                        }
+                        
+                    }
+
+                    small {
+                        color: #FF4D4F;
+                        font-size: 14px;
+                        margin-top: 5px;
+                        font-weight: 400;
+                    }
+                    .gen{
+                        padding-left: 1rem;
                     }
                 }
-
-                .hideEye {
-                    position: absolute;
-                    cursor: pointer;
-                    right: 1rem;
-                    bottom: 1rem;
-                    font-size: 1.5rem;
-                    display: none;
-                }
-
-                .showEye {
-                    position: absolute;
-                    cursor: pointer;
-                    right: 1rem;
-                    bottom: 1rem;
-                    font-size: 1.5rem;
-                    display: flex;
-                }
-            }
-
-            small {
-                color: #FF4D4F;
-                font-size: 14px;
-                margin-top: 5px;
-                font-weight: 400;
             }
         }
     }
+
+
 
     .signup__bottomContent {
         display: grid;
@@ -146,133 +282,22 @@
     }
 
 
-    .signupLeft {
-        width: 29rem;
-        margin-top: 2.5rem;
-        margin-left: 4rem;
-
-        @media screen and (max-width: 600px) {
-            margin-left: 1.25rem;
-            margin-right: 1.25rem;
-        }
-
-
-        .createAccountText {
-            margin-bottom: 2.5rem;
-            text-align: center;
-            font-style: normal;
-            font-weight: 700;
-            font-size: 1.563rem;
-            line-height: 160%;
-            color: #333333;
-
-        }
-
-
-        .permission {
-            margin-top: 1rem;
-
-            .permissionText {
-                margin-left: 0.5rem;
-                font-weight: 400;
-                font-size: 1rem;
-                line-height: 120%;
-                text-decoration: none;
-            }
-
-
-        }
-
-        .button {
-            background: #714DD9;
-            border-radius: 0.5rem;
-            width: 100%;
-            padding: 0.875rem;
-            color: white;
-            font-weight: 700;
-            font-size: 1rem;
-            line-height: 1.25rem;
-            cursor: pointer;
-            margin-top: 5rem;
-            border: none;
-
-            &:focus {
-                box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05), 0px 0px 0px 4px #D1E9FF;
-            }
-
-        }
-
-        .buttonDisabled {
-            width: 100%;
-            padding: 0.875rem;
-            background: #D3D0D9;
-            border-radius: 0.5rem;
-            color: white;
-            font-weight: 700;
-            font-size: 1rem;
-            line-height: 1.25rem;
-            margin-top: 5rem;
-            border: none;
-        }
-
-        .buttonEnabled {
-            width: 100%;
-            padding: 0.875rem;
-            background-color: #714DD9;
-            border-radius: 0.5rem;
-            color: white;
-            font-weight: 700;
-            font-size: 1rem;
-            line-height: 1.25rem;
-            margin-top: 5rem;
-            border: none;
-        }
-
-        .tosignup {
-            margin-top: 1.719rem;
-            color: #707070;
-            text-align: center;
-        }
-
-        .continueWith {
-            display: flex;
-            align-items: center;
-            margin-top: 2rem;
-
-            .continueWithLine {
-                height: 2px;
-                display: block;
-                width: 33%;
-                background-color: #D3D0D9;
-            }
-
-            .continueWithText {
-                color: #707070;
-                margin-right: 0.7rem;
-                margin-left: 0.7rem;
-            }
-        }
-
-        .signupSocials {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-top: 1rem;
-            gap: 2rem;
-        }
-    }
 
     .signupImg {
-        height: inherit;
-
+        width: 0;
+        height: 100%;
+        display: none;
+        @media screen and (min-width: 1024px) {
+            width: 50%;
+            display: flex;
+            height: auto;
+          }
         img {
+            width: 100%;
             height: 100%;
-            object-fit: cover;
+           object-fit: cover;
         }
 
-        @media screen and (max-width: 600px) {
-            display: none;
-        }
     }
 }
 
