--- a/src/core/settings/profile/Settings.scss
+++ b/src/core/settings/profile/Settings.scss
@@ -298,10 +298,30 @@
                 }
 
                 .form-form {
+                    display:flex;
+                    flex-direction: column;
                     .form-field {
+                        display: flex;
+                        flex-direction: column;
+                        margin-bottom: 1.7rem;
+                        .lab{
+                            margin-bottom: .5rem;
+                        }
                         input {
                             outline: none;
+                            border: 1px solid #dbd8d8;
+                            border-radius: 8px;
+                            padding: 15px 16px;
+                            &:focus{
+                                border: 1px solid #714DD9;
+                                border-radius: 8px;
+                            }
                         }
+                    }
+                }
+                .btn-btn-btn{
+                    &:hover{
+                        cursor: pointer;
                     }
                 }
             }
