--- a/src/components/VA-Login/style.module.scss
+++ b/src/components/VA-Login/style.module.scss
@@ -1,28 +1,41 @@
 .login__main {
-	min-height: 100vh;
+	max-height: 100vh;
 	width: 100%;
 	display: flex;
 	place-items: center;
 	background-color: #F9F7FF;
 
 	.login__formWrapper {
+		height: 100vh;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		flex-direction: column;
+		gap: 2rem;
 		width: 50%;
-		padding: 0 5rem;
-		// max-width: 31.25rem;
+		padding: 0 5%;
 
 		@media screen and (max-width: 600px) {
 			width: 100%;
 			padding: 0 2rem;
+
+			.login__formWrapper {
+				padding: 0 2rem;
+			}
 		}
 	}
 	
 
 	.loginImg{
 		width: 50%;
-		// margin-left: 7.5rem;
-		// margin-top: 9.75rem;
-		// margin-right: 7rem;
-		// margin-bottom: 1rem;
+		height: 100vh;
+		overflow-y: hidden;
+
+		img{
+			object-fit: cover;
+			height: 100%;
+			width: 100%;
+		}
 
 		@media screen and (max-width: 600px) {
             display: none;
@@ -48,6 +61,9 @@
 .login__form {
 	display: grid;
 	gap: 1rem;
+	width: 100%;
+	padding: 0 2rem;
+	// height: 100vh;
 }
 
 .login__formItem {
@@ -88,7 +104,7 @@
 	border-radius: 0.5rem;
 	position: relative;
 	height: 3rem;
-	margin-top: 0.8rem;
+	// margin-top: 0.8rem;
 }
 
 .login__password {
