--- a/src/components/va-signup/auth/signup/VASignup.module.scss
+++ b/src/components/va-signup/auth/signup/VASignup.module.scss
@@ -15,9 +15,9 @@
         margin-top: 2.5rem;
         margin-left: 4rem;
 
-        .accountLabel, .phoneLabel{
-            margin-bottom: 1.5rem !important;
-        }
+        // .accountLabel, .phoneLabel{
+        //     margin-bottom: 1.5rem !important;
+        // }
 
         @media screen and (max-width: 600px) {
             margin-left: 2rem;
@@ -43,8 +43,9 @@
                 background-color: #fff;
                 border-radius: 0.5rem;
                 border: 1px solid #E9F3F5;
-                padding: 0 1rem;
+                padding: 1rem;
                 margin-top: 0;
+                height: 3rem;
             }
 
             .describer{
@@ -66,6 +67,7 @@
                     background: #FFFFFF;
                     border: 1px solid #E9F3F5;
                     border-radius: 0.5rem;
+                    width: 100%;
                     
 
                     &:focus{
@@ -79,7 +81,7 @@
                         position: absolute;
                         cursor: pointer;
                         right: 1rem;
-                        bottom: 1.7rem;
+                        bottom: .7rem;
                         font-size: 1.5rem;
                         display: none;
                     }
@@ -88,7 +90,7 @@
                         position: absolute;
                         cursor: pointer;
                         right: 1rem;
-                        bottom: 1.7rem;
+                        bottom: .7rem;
                         font-size: 1.5rem;
                         display: flex;
                         
@@ -99,7 +101,7 @@
                 border: none;
                 padding: 0;
                 outline: none;
-                margin-top: 1rem;
+                // margin-top: 1rem;
             }
 
 
