--- a/src/components/landing-page/section-three/SectionThree.module.scss
+++ b/src/components/landing-page/section-three/SectionThree.module.scss
@@ -77,6 +77,14 @@
     justify-content: space-between;
     gap: 3rem;
 
+     .getStarted {
+      @include button;
+      border: none;
+      background-color: $activeColor;
+      width: 50%;
+      color: #FAFAFA;
+     }
+     
     .download {
       @include button;
       border: 1px solid $activeColor;
