--- a/src/components/VAHome/VAHome.module.scss
+++ b/src/components/VAHome/VAHome.module.scss
@@ -123,7 +123,7 @@
             }
                   @media screen and ( max-width:600px ){
                     .comment{
-                      width: 87%;
+                      width: 87% !important;
                     }
                     .sidebar{
                         
