--- a/src/components/VAHome/VAHome.module.scss
+++ b/src/components/VAHome/VAHome.module.scss
@@ -153,4 +153,9 @@
                       //   .comment{
                       //     width: 85.5% !important
                       //  }
-                      //  }
+                      //  } 
+                      
+                      @media screen and ( max-width:400px ){
+                    .comment{
+                      width: 80% !important;
+                    }}
