--- a/src/components/landing-page/section-three/section-three-list/sectionThreeList.module.scss
+++ b/src/components/landing-page/section-three/section-three-list/sectionThreeList.module.scss
@@ -25,7 +25,7 @@ p {
 }
 
 .section__three_list {
-  // border: 1px solid red;
+  border: 1px solid #fff;
   display: flex;
   gap: 0.5rem;
   padding: 1rem;
