--- a/src/components/about/section-two/aboutSectiontwo.module.scss
+++ b/src/components/about/section-two/aboutSectiontwo.module.scss
@@ -5,7 +5,7 @@
   // @include container;
   max-width: 100vw;
   margin: 0 auto;
-  text-align: center;
+  text-align: left;
   h2 {
     @include header-font;
     margin-bottom: 0.5rem;
