--- a/src/components/about/section-two/aboutSectiontwo.module.scss
+++ b/src/components/about/section-two/aboutSectiontwo.module.scss
@@ -5,10 +5,11 @@
   // @include container;
   max-width: 100vw;
   margin: 0 auto;
-  text-align: left;
   h2 {
     @include header-font;
     margin-bottom: 0.5rem;
+    padding-left: 120px;
+    text-align: left;
   }
 }
 
@@ -20,7 +21,8 @@
   text-align: center;
   h2 {
     @include header-font;
-    margin: 1rem;
+    margin-bottom: 1rem;
+    padding-left: 0px;
   }
 }
 }
