--- a/src/components/VAHome/VAHome.module.scss
+++ b/src/components/VAHome/VAHome.module.scss
@@ -44,7 +44,7 @@
 
                   
                   //sidebar
-                  @media screen and ( max-width:1440px ){
+                
                     .closeIcon{
                       display: block;
                     }
@@ -77,7 +77,7 @@
                             background-color: white !important;
                             top: -45px !important;
                           
-                        
+                            transition: all 0.7s ease-in-out;
                         }
                         .comment {
                          
@@ -96,7 +96,7 @@
                             top: 44px;
                         }
                     
-                  }
+                 
                   @media screen and ( max-width:1010px ){  
                     .saviour__relative{
                   
@@ -141,6 +141,11 @@
                        
                         .comment.hidden {
                            right: -300px !important;
+                          }
+
+
+                          .main{
+                            padding: 33px 12px !important;
                           }
                           
                       //     .comment{
