--- a/src/core/settings/profile/Settings.scss
+++ b/src/core/settings/profile/Settings.scss
@@ -6,8 +6,77 @@
     text-decoration: none;
     list-style: none;
     width: 100%;
-    max-width: 1000px;
+    max-width: 100%;
     height: max-content;
+    position: relative;
+
+    .delete_modal {
+        position: absolute;
+        background-color: rgba(0, 0, 0, 0.2);
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        margin-right: 50rem;
+        z-index: 100;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+      
+
+        .con {
+            display: flex;
+            flex-direction: column;
+            justify-self: center;
+            border-radius: 8px;
+            width: 80%;
+            height: auto;
+            background-color: #fff;
+            padding: 32px 24.5px;
+            row-gap: 24px;
+            @media screen and (min-width: 800px) {
+                width: 50%;
+            }
+            @media screen and (min-width: 1200px) {
+                width: 30%;
+            }
+            @media screen and (min-width: 1440px) {
+                width: 25%;
+            }
+
+            .delete_head {
+                font-weight: 700;
+                color: #333333;
+                line-height: 28.8px;
+                font-size: 18px;
+                text-align: left;
+                line-height: 24px;
+            }
+            .delete_btn {
+                padding: 14px 24px;
+                font-weight: 600;
+                font-size: 14px;
+                border: none;
+                border-radius: 8px;
+                line-height: 22.4px;
+                background-color: #FF4D4F;
+                color: #fff;
+                &:hover{
+                    cursor: pointer;
+                }
+            }
+            .delete_alt{
+                background-color: #fff;
+                color: #714DD9;
+                border: 1px solid #714DD9;
+            }
+        }
+    }
+    .delete_hidden{
+        display: none;
+    }
 
     .profile {
         display: flex;
@@ -35,6 +104,7 @@
                 align-content: center;
                 align-items: center;
                 justify-items: center;
+
                 @media screen and (min-width: 780px) {
                     flex-direction: row;
                     align-items: center;
@@ -53,6 +123,7 @@
                         column-gap: 1.2rem;
                         text-align: left;
                     }
+
                     .user-name {
                         display: flex;
                         flex-direction: column;
@@ -82,6 +153,7 @@
                         align-items: center;
                         justify-content: center;
                         margin-bottom: 16px;
+
                         @media screen and (min-width: 780px) {
                             width: 110px;
                             height: 110px;
@@ -92,9 +164,10 @@
                             font-size: 34px;
                             color: #714DD9;
                             bottom: 1rem;
+
                             @media screen and (min-width: 780px) {
                                 font-size: 45px;
-                            
+
                                 bottom: 1.4rem;
                             }
                         }
@@ -187,8 +260,10 @@
                                 font-size: 16px;
                             }
                         }
-                        .uid{
+
+                        .uid {
                             font-size: .7rem;
+
                             @media screen and (min-width: 456px) {
                                 font-size: 16px;
                             }
@@ -236,6 +311,7 @@
                         justify-content: space-between;
                         list-style: none;
                         text-decoration: none;
+
                         @media screen and (min-width: 780px) {
                             font-size: 16px;
                         }
@@ -253,6 +329,7 @@
                 text-decoration: none;
                 margin-bottom: 24px;
                 row-gap: 40px;
+
                 @media screen and (min-width: 780px) {
                     padding: 34px 26px;
                 }
@@ -261,6 +338,7 @@
                     color: #DB0004;
                     font-size: 14px;
                     font-weight: 600;
+
                     @media screen and (min-width: 780px) {
                         font-size: 16px;
                     }
@@ -273,7 +351,8 @@
                 max-width: 600px;
                 align-self: center;
                 width: 100%;
-                .head{
+
+                .head {
                     align-self: center;
                 }
 
@@ -298,29 +377,34 @@
                 }
 
                 .form-form {
-                    display:flex;
+                    display: flex;
                     flex-direction: column;
+
                     .form-field {
                         display: flex;
                         flex-direction: column;
                         margin-bottom: 1.7rem;
-                        .lab{
+
+                        .lab {
                             margin-bottom: .5rem;
                         }
+
                         input {
                             outline: none;
                             border: 1px solid #dbd8d8;
                             border-radius: 8px;
                             padding: 15px 16px;
-                            &:focus{
+
+                            &:focus {
                                 border: 1px solid #714DD9;
                                 border-radius: 8px;
                             }
                         }
                     }
                 }
-                .btn-btn-btn{
-                    &:hover{
+
+                .btn-btn-btn {
+                    &:hover {
                         cursor: pointer;
                     }
                 }
