--- a/src/components/about/section-two/AboutUsHeader.module.scss
+++ b/src/components/about/section-two/AboutUsHeader.module.scss
@@ -1,105 +1,95 @@
 @import "../../../scss/variables";
 @import "../../../scss/mixins";
 
-.headerContainer {
-  display: flex;
-  flex-direction: column;
-  gap: 3rem;
-  padding-top: 0;
-  @media (min-width: 992px) {
-    padding-top: 3rem;
-    flex-direction: row;
-    // gap: 10rem;
-    
+// ===================
+// MIXINS
+// ===================
+@mixin img_fluid {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+// ====================
+// END OF MIXINS
+// ====================
+
+// using the BEM system
+.container {
+  width: 100%;
+  max-width: 600px;
+  margin: auto;
+  padding: 0 1.25rem;
+}
+
+.img {
+  @include img_fluid;
+  transition: 0.3s ease;
+}
+
+.float_icon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 1.5rem;
+  width: 1.5rem;
+
+  @media screen and (min-width: 992px) {
+    margin: 3rem;
+    width: initial;
   }
-  
-.headerRow{
-display: flex;
-flex-direction: row;
-//justify-content: center;
-align-items: center;
-gap: 0.5rem;
 }
 
-.headerCol{
-  display: flex;
-  flex-direction:  column;
-  border: 1px solid #fff;
-  border-radius:8px;
-  padding: 1rem 2rem;
-  margin-bottom: 1rem;
-}
-
-.headerCol:hover{
-border: 1px solid  #714DD9;
-border-radius:8px;
-}
-
-.headerRow h1{
-  font-size: 1rem;
-  text-align: center;
-}
-.headerRow p{
-  text-align: center;
-}
-
-.box{
-  border: 1px solid  #714DD9;
-  border-radius:8px;
-  padding: 1rem 1rem;
-  margin-bottom: 1rem;
-}
-  .header {
-    font-size: 27px;
-    font-weight: 700;
+.main {
+  position: relative;
+  @media (min-width: 900px) {
+    display: flex;
+    align-items: center;
+    padding: 10rem 0;
+    max-width: 80vw;
+    margin: 0 auto;
   }
 
-    .tickedText {
-    line-height: 180%;
-    padding-top: 1rem;
-   // margin: 1.5rem 0;
-    //margin-right: 0;
-    text-align: justify;
-    font-size: 1rem;
+  header {
+    margin: 4.25rem 1.25rem;
+    p {
+      color: $activeColor;
+      font-weight: 500;
+    }
     @media (min-width: 992px) {
-      //margin-right: 10rem;
+      margin: 0;
+    }
+
+    .section__three_title {
+      font-size: 1.56rem;
+      margin-bottom: 1rem;
+      @media (min-width: 992px) {
+        font-size: 48px;
+      }
     }
   }
-  
-@media (min-width:992px){
-  .headerTickedBox {
-    flex: 1;
-    padding-left: 120px;
-    @media(max-width:768px){
-      padding-left: 0px;
-  }
+
+  .steps {
+    margin: 1rem 0;
+    display: flex;
+    justify-content: space-between;
+    gap: 3rem;
+    @media only screen and (max-width: 768px){
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    gap: 1rem
 }
-}
-    .button_getstarted {
-      @include button;
-      background-color: $activeColor;
-      color: $white;
-    }
-    
-    .button_login {
+
+    .download {
       @include button;
       border: 1px solid $activeColor;
       background-color: transparent;
-      color: $activeColor;
+      width: 50%;
     }
-    
-  .headerImageBox {
-    flex: 1;
-    .img {
-      padding-left: 3px;
-      @include img_fluid;
-      width:100%;
-    }
-  }
 
-  .btn {
-    @media (min-width: 992px) {
-      display: none;
+    p {
+      margin-top: 1rem;
     }
   }
 }
+
