--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,6 +6,18 @@
   box-sizing: border-box;
   font-family: $font-open-sans !important;
   text-decoration: none;
+
+  &::-webkit-scrollbar {
+    /* Hide scrollbar for Chrome, Safari and Opera */
+
+    display: none !important;
+
+    /* Hide scrollbar for IE, Edge and Firefox */
+    -ms-overflow-style: none !important;
+    /* IE and Edge */
+    scrollbar-width: none !important;
+    /* Firefox */
+  }
 }
 
 body {
