--- a/src/core/auth/signup/Signup.module.scss
+++ b/src/core/auth/signup/Signup.module.scss
@@ -102,9 +102,13 @@
         margin-top: 5rem;
         border: none;
         cursor: pointer;
+        transition: all 1s ease;
 
         &:hover {
           background-color: #7b5ed3;
+          box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05),
+            0px 0px 0px 4px #637586;
+
         }
       }
 
@@ -229,6 +233,10 @@
           .gen {
             padding-left: 1rem;
           }
+        }
+        .errMessage{
+          text-align: center;
+          color: red;
         }
       }
     }
