--- a/src/core/auth/signup/Signup.module.scss
+++ b/src/core/auth/signup/Signup.module.scss
@@ -107,7 +107,7 @@
         &:hover {
           background-color: #7b5ed3;
           box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05),
-            0px 0px 0px 4px #637586;
+            0px 0px 0px 4px #a1b5c9;
 
         }
       }
