--- a/src/components/Comments/Comments.module.scss
+++ b/src/components/Comments/Comments.module.scss
@@ -36,7 +36,7 @@
   flex-direction: column;
   gap: 25px;
   margin: 9px 20px;
-  padding: 0 30px;
+  padding: 0px;
 }
 @media screen and (min-width: 900px) {
   .comments {
